--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
-    "editor.fontFamily": "Fira Code , 'Courier New', monospace",
-    "terminal.integrated.fontFamily": "JetBrains Mono"
+    "editor.fontFamily": "JetBrains Mono , 'Courier New', monospace",
+    "terminal.integrated.fontFamily": "JetBrains Mono",
+    "editor.fontSize": 14
 }
